src/ImguiSdlSharp.Native/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImGuiPayload_t ImGuiPayload;                              
typedef struct ImGuiTableSortSpecs_t ImGuiTableSortSpecs;                
typedef struct ImGuiTableColumnSortSpecs_t ImGuiTableColumnSortSpecs;    
typedef int ImGuiCond;           
typedef int ImGuiTableBgTarget;  
typedef int ImGuiDragDropFlags;     
typedef int ImGuiHoveredFlags;      
typedef int ImGuiPopupFlags;        
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableFlags;        
typedef int ImGuiTableColumnFlags;  
typedef int ImGuiTableRowFlags;     
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_CloseCurrentPopup(void);                                                                       
CIMGUI_API bool ImGui_BeginPopupContextItem(void);                                                                        
CIMGUI_API bool ImGui_BeginPopupContextItemEx(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_BeginPopupContextWindow(void);                                                                      
CIMGUI_API bool ImGui_BeginPopupContextWindowEx(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API bool ImGui_BeginPopupContextVoid(void);                                                                        
CIMGUI_API bool ImGui_BeginPopupContextVoidEx(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_IsPopupOpen(const char* str_id, ImGuiPopupFlags flags );  
CIMGUI_API bool ImGui_BeginTable(const char* str_id, int column, ImGuiTableFlags flags );                
CIMGUI_API bool ImGui_BeginTableEx(const char* str_id, int column, ImGuiTableFlags flags , ImVec2 outer_size , float inner_width );
CIMGUI_API void ImGui_EndTable(void);                                                                             
CIMGUI_API void ImGui_TableNextRow(void);                                                                         
CIMGUI_API void ImGui_TableNextRowEx(ImGuiTableRowFlags row_flags , float min_row_height );  
CIMGUI_API bool ImGui_TableNextColumn(void);                                                                      
CIMGUI_API bool ImGui_TableSetColumnIndex(int column_n);                                                          
CIMGUI_API void ImGui_TableSetupColumn(const char* label, ImGuiTableColumnFlags flags );  
CIMGUI_API void ImGui_TableSetupColumnEx(const char* label, ImGuiTableColumnFlags flags , float init_width_or_weight , ImGuiID user_id );
CIMGUI_API void ImGui_TableSetupScrollFreeze(int cols, int rows);                                  
CIMGUI_API void ImGui_TableHeadersRow(void);                                                       
CIMGUI_API void ImGui_TableHeader(const char* label);                                              
CIMGUI_API ImGuiTableSortSpecs*  ImGui_TableGetSortSpecs(void);                       
CIMGUI_API int                   ImGui_TableGetColumnCount(void);                     
CIMGUI_API int                   ImGui_TableGetColumnIndex(void);                     
CIMGUI_API int                   ImGui_TableGetRowIndex(void);                        
CIMGUI_API const char*           ImGui_TableGetColumnName(int column_n );   
CIMGUI_API ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n );  
CIMGUI_API void                  ImGui_TableSetColumnEnabled(int column_n, bool v);   
CIMGUI_API void                  ImGui_TableSetBgColor(ImGuiTableBgTarget target, ImU32 color, int column_n ); 
CIMGUI_API void  ImGui_Columns(void);                                      
CIMGUI_API void  ImGui_ColumnsEx(int count , const char* id , bool border );
CIMGUI_API void  ImGui_NextColumn(void);                                   
CIMGUI_API int   ImGui_GetColumnIndex(void);                               
CIMGUI_API float ImGui_GetColumnWidth(int column_index );        
CIMGUI_API void  ImGui_SetColumnWidth(int column_index, float width);      
CIMGUI_API float ImGui_GetColumnOffset(int column_index );       
CIMGUI_API void  ImGui_SetColumnOffset(int column_index, float offset_x);  
CIMGUI_API int   ImGui_GetColumnsCount(void);
CIMGUI_API bool ImGui_BeginTabBar(const char* str_id, ImGuiTabBarFlags flags );    
CIMGUI_API void ImGui_EndTabBar(void);                                                      
CIMGUI_API bool ImGui_BeginTabItem(const char* label, bool* p_open , ImGuiTabItemFlags flags ); 
CIMGUI_API void ImGui_EndTabItem(void);                                                     
CIMGUI_API bool ImGui_TabItemButton(const char* label, ImGuiTabItemFlags flags );  
CIMGUI_API void ImGui_SetTabItemClosed(const char* tab_or_docked_window_label);             
CIMGUI_API void ImGui_LogToTTY(int auto_open_depth );                                      
CIMGUI_API void ImGui_LogToFile(int auto_open_depth , const char* filename );  
CIMGUI_API void ImGui_LogToClipboard(int auto_open_depth );                                
CIMGUI_API void ImGui_LogFinish(void);                                                               
CIMGUI_API void ImGui_LogButtons(void);                                                              
CIMGUI_API void ImGui_LogText(const char* fmt, ...) IM_FMTARGS(1);                                   
CIMGUI_API void ImGui_LogTextV(const char* fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API bool                ImGui_BeginDragDropSource(ImGuiDragDropFlags flags );                      
CIMGUI_API bool                ImGui_SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond ); 
CIMGUI_API void                ImGui_EndDragDropSource(void);                                                      
CIMGUI_API bool                ImGui_BeginDragDropTarget(void);                                                    
CIMGUI_API const ImGuiPayload* ImGui_AcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags );  
CIMGUI_API void                ImGui_EndDragDropTarget(void);                                                      
CIMGUI_API const ImGuiPayload* ImGui_GetDragDropPayload(void);                                                     
CIMGUI_API void ImGui_BeginDisabled(bool disabled );
CIMGUI_API void ImGui_EndDisabled(void);
CIMGUI_API void ImGui_PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);
CIMGUI_API void ImGui_PopClipRect(void);
CIMGUI_API void ImGui_SetItemDefaultFocus(void);                     
CIMGUI_API void ImGui_SetKeyboardFocusHere(void);                    
CIMGUI_API void ImGui_SetKeyboardFocusHereEx(int offset );  
CIMGUI_API bool    ImGui_IsItemHovered(ImGuiHoveredFlags flags );          
CIMGUI_API bool    ImGui_IsItemActive(void);                                        
CIMGUI_API bool    ImGui_IsItemFocused(void);                                       
CIMGUI_API bool    ImGui_IsItemClicked(void);                                       
typedef struct ImGuiPayload_t
{
    void*   Data;            
    int     DataSize;        
    ImGuiID SourceId;        
    ImGuiID SourceParentId;  
    int     DataFrameCount;  
    char    DataType[32+1];  
    bool    Preview;         
    bool    Delivery;        
} ImGuiPayload;
typedef struct ImGuiTableColumnSortSpecs_t
{
    ImGuiID            ColumnUserID;       
    ImS16              ColumnIndex;        
    ImS16              SortOrder;          
    ImGuiSortDirection SortDirection : 8;  
} ImGuiTableColumnSortSpecs;
typedef struct ImGuiTableSortSpecs_t
{
    const ImGuiTableColumnSortSpecs* Specs;       
    int                              SpecsCount;  
    bool                             SpecsDirty;  
} ImGuiTableSortSpecs;