src/ImguiSdlSharp/Native.cs


        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_CloseCurrentPopup();

        #endregion

        #region Popups: open+begin combined functions helpers

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginPopupContextItem();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginPopupContextItemEx(byte* str_id = default, ImGuiPopupFlags popup_flags = (ImGuiPopupFlags)1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginPopupContextWindow();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginPopupContextWindowEx(byte* str_id = default, ImGuiPopupFlags popup_flags = (ImGuiPopupFlags)1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginPopupContextVoid();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginPopupContextVoidEx(byte* str_id = default, ImGuiPopupFlags popup_flags = (ImGuiPopupFlags)1);

        #endregion

        #region Popups: query functions

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsPopupOpen(byte* str_id, ImGuiPopupFlags flags = default);

        #endregion

        #region Tables

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginTable(byte* str_id, int column, ImGuiTableFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginTableEx(byte* str_id, int column, ImGuiTableFlags flags = default, ImVec2 outer_size = default, float inner_width = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndTable();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableNextRow();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableNextRowEx(ImGuiTableRowFlags row_flags = default, float min_row_height = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_TableNextColumn();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_TableSetColumnIndex(int column_n);

        #endregion

        #region Tables: Headers & Columns declaration

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableSetupColumn(byte* label, ImGuiTableColumnFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableSetupColumnEx(byte* label, ImGuiTableColumnFlags flags = default, float init_width_or_weight = default, ImGuiID user_id = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableSetupScrollFreeze(int cols, int rows);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableHeadersRow();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableHeader(byte* label);

        #endregion

        #region Tables: Sorting & Miscellaneous functions

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiTableSortSpecs* ImGui_TableGetSortSpecs();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_TableGetColumnCount();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_TableGetColumnIndex();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_TableGetRowIndex();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte* ImGui_TableGetColumnName(int column_n = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableSetColumnEnabled(int column_n, bool v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_TableSetBgColor(ImGuiTableBgTarget target, uint color, int column_n = -1);

        #endregion

        #region Legacy Columns API (prefer using Tables!)

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_Columns();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ColumnsEx(int count = 1, byte* id = default, bool border = true);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_NextColumn();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_GetColumnIndex();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern float ImGui_GetColumnWidth(int column_index = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetColumnWidth(int column_index, float width);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern float ImGui_GetColumnOffset(int column_index = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetColumnOffset(int column_index, float offset_x);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_GetColumnsCount();

        #endregion

        #region Tab Bars, Tabs

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginTabBar(byte* str_id, ImGuiTabBarFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndTabBar();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginTabItem(byte* label, bool* p_open = default, ImGuiTabItemFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndTabItem();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_TabItemButton(byte* label, ImGuiTabItemFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetTabItemClosed(byte* tab_or_docked_window_label);

        #endregion

        #region Logging/Capture

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogToTTY(int auto_open_depth = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogToFile(int auto_open_depth = -1, byte* filename = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogToClipboard(int auto_open_depth = -1);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogFinish();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogButtons();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogText(byte* fmt, __arglist);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LogTextV(byte* fmt, nuint /* va_list */ args);

        #endregion

        #region Drag and Drop

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginDragDropSource(ImGuiDragDropFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SetDragDropPayload(byte* type, void* data, nuint sz, ImGuiCond cond = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndDragDropSource();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginDragDropTarget();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiPayload* ImGui_AcceptDragDropPayload(byte* type, ImGuiDragDropFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndDragDropTarget();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiPayload* ImGui_GetDragDropPayload();

        #endregion

        #region Disabling [BETA API]

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_BeginDisabled(bool disabled = true);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndDisabled();

        #endregion

        #region Clipping

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_PushClipRect(ImVec2 clip_rect_min, ImVec2 clip_rect_max, bool intersect_with_current_clip_rect);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_PopClipRect();

        #endregion

        #region Focus, Activation

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetItemDefaultFocus();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetKeyboardFocusHere();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetKeyboardFocusHereEx(int offset = default);

        #endregion

        #region Item/Widgets Utilities and Query Functions

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemHovered(ImGuiHoveredFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemActive();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemFocused();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemClicked();
